variables.RunHalf.scala.code
var biscuits = 0
var caseOrange = 0
while (2*biscuits != caseOrange+1){
  avance()
  if(estSurOrange()==true){
    caseOrange=caseOrange+1}
	if(estSurBiscuit==true){
    biscuits=biscuit+1}
}